# github_actions

./: .dockerignore  .gitignore  .gitmodules  joke_backend.py  main.py  pyproject.toml  test_main.py
.github/workflows/: build.yml  ci.yml  propagate_changes.yml
backend-framework-library/: .gitignore  Dockerfile  README.md  buildtrigger.yaml  docker-compose.yaml  setup.py
backend-framework-library/.github/workflows/: ci.yml
k8s/: deployment.yaml  ingress.yml  service.yml
r2-factory-platform/: .gitignore  Dockerfile  README.md  buildtrigger.yaml  buildtriggertag.yaml  docker-compose.yaml  setup.py
r2-factory-platform/r2_factory_platform/: __init__.py  service_generator.py
