[tool.poetry]
name = "backend-examplea"
version = "0.1.0"
description = ""
authors = ["Linus Casassa <linus.casassa@r2-factory.com>"]

[tool.poetry.dependencies]
python = "^3.8.12"
pandas = "^1.4.2"
numpy = "^1.22.3"

[tool.poetry.dev-dependencies]
pytest = "^7.1.1"
black = "^22.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
