[tool.poetry]
name = "joke-backend"
version = "0.1.0"
description = ""
authors = ["Linus Casassa <linus.casassa@r2-factory.com>"]

[tool.poetry.dependencies]
python = "^3.8.12"
pandas = "^1.4.2"
numpy = "^1.22.3"
r2_factory_platform = { path = "r2-factory-platform", develop = true }
requests = "^2.27.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
